alignment in experience#show - Bugfix

--- a/app/assets/stylesheets/experiences.scss
+++ b/app/assets/stylesheets/experiences.scss
@@ -57,8 +57,8 @@ body {
 
 .author-details{
   display: flex;
-  flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   margin-top: 20px;
   padding: 10px;
   border-radius: 3px;
@@ -77,11 +77,7 @@ body {
   text-align: center;
   align-items: center;
   justify-content: space-between;
-  padding-bottom: 5px;
-  height: 20%;
-  position: absolute;
-  bottom: 5px;
-  right: 5px;
+  height: 100%;
 
   .fb_reset {
     margin-left: 10px;
@@ -98,32 +94,21 @@ body {
     }
   }
 }
+.experience-header{
+  display: flex;
+  justify-content: space-between;
 
-.experience-text{
-  padding-left: 40px;
-
-  .experience-header{
-
-    justify-content: space-between;
-    font-size: 16px;
-    line-height: 30px;
-
-    .title{
-      padding-top: 30px;
-      font-size: 16px;
-    }
-
-    .rating{
-      position: relative;
-      color: black;
-      width: 100px;
-      margin-left: 25px;
-    }
+  .title{
   }
 
-  .experience-description{
-    padding: 50px;
+  .rating{
+    position: relative;
+    flex: 1 0 95px;
   }
+}
+
+.experience-description{
+  padding: 50px;
 }
 
 @media (max-width: 600px) {
